@@ -370,7 +370,7 @@ Supported LaTeX symbols include: \\AA, \\Alpha, \\Beta,
 \\Upsilon, \\Xi, \\Zeta, \\alpha, \\approx, \\ast, \\asymp, \\beta, \\bowtie,
 \\bullet, \\cap, \\chi, \\circ, \\cup, \\dagger, \\dashv, \\ddagger, \\deg,
 \\delta, \\diamond, \\divide, \\doteq, \\downarrow, \\epsilon, \\equiv,
-\\eta, \\gamma, \\ge, \\gg, \\in, \\infty, \\int, \\iota, \\kappa, \\lambda,
+\\eta, \\gamma, \\ge, \\gg, \\hat, \\in, \\infty, \\int, \\iota, \\kappa, \\lambda,
 \\le, \\leftarrow, \\lhd, \\ll, \\models, \\mp, \\mu, \\neq, \\ni, \\nu, \\odot,
 \\omega, \\omicron, \\ominus, \\oplus, \\oslash, \\otimes, \\parallel,
 \\perp, \\phi, \\pi, \\pm, \\prec, \\preceq, \\propto, \\psi, \\rhd, \\rho,
